src/objects/Insertion__c.object
<CustomObject>
    <description>Specific run dates/spots for marketing ads</description>
    <fields>
        <fullName>Advertisement__c</fullName>
        <label>Advertisement</label>
        <referenceTo>Advertisement__c</referenceTo>
        <relationshipLabel>Insertions</relationshipLabel>
        <relationshipName>Insertions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberofSpots__c</fullName>
        <label># of Spots</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunOnThisDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Run on this Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Insertion</label>
    <nameField>
        <displayFormat>Ins-{000000}</displayFormat>
        <label>Insertion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insertions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>